Comments to manuscript

--- a/_MOB_paper.Rnw
+++ b/_MOB_paper.Rnw
@@ -291,7 +291,9 @@ HS_tree <- lmertree(PPVT ~ Program*Age | (1|MotherID/ChildID) | AFTQ + Race +
 
 With the first argument, we specified the model \verb|formula|, which has three parts separated by vertical bars: The left part (\verb|PPVT ~ Program*Age|) specifies the response variable, followed by a tilde (\verb|~|) and the fixed-effects predictors of relevance. The middle part (\texttt{1|MotherID/ChildID}) specified the random effect: Repeated PPVT assessments are nested within children, which are nested within mothers. The right part (\verb|AFTQ + Race + Income + Mom_edu_yrs + Mom_height|) specified the partitioning variables: covariates that may possibly affect the values of the fixed-effects parameters. 
 
-With the second argument, we specified the dataset which contain the variables. With the \texttt{cluster} argument, we specified that the partitioning variables are measured at the level of the mothers. As a result, parameter stability tests will be performed on the appropriate level \citep{FokkyZeil23}. Not specifying the \texttt{cluster} argument would result in use of the default observation-level parameter stability tests, which would yield inflated type-I error rates. That is, it could result in detection of spurious subgroups. Finally, because we want to retain large enough subgroups, we specified that the minimum number of observations in a terminal node should be 250.
+With the second argument, we specified the dataset which contain the variables. With the \texttt{cluster} argument, we specified that the partitioning variables are measured at the level of the mothers. As a result, parameter stability tests will be performed on the appropriate level \citep{FokkyZeil23}. Not specifying the \texttt{cluster} argument would result in use of the default observation-level parameter stability tests, which would yield inflated type-I error rates. That is, it could result in detection of spurious subgroups. \todo[inline]{I am sure you know much better than me what happens if the cluster argument is used and you have discussed that a lot with Achim. But I am not $100\%$ sure that this is the case (and maybe I am completely wrong here), because my pilot simulations have always shown increased type-I error rates even when I used the cluster argument. I have only seen $5\%$ type-I error rates with the Wang \& Merkle approach where the covariates are aggregated before they enter the score test. Maybe we want to rephrase it in a way as you have phrased it in the article with Achim: ``[by using the cluster argument,] so-called clustered covariances are obtained, which account for dependence between observations within the same cluster (Zeileis, Köll, \& Graham, 2020)''. I think I would be more comfortable with a less direct formulation here, and then maybe we can further discuss this for the revision when we have a bit more time. \\
+A suggestion: ``By using the cluster argument, we account for dependence between observations within the same cluster.''. And if I remember correctly, one critical point was also that in longitudinal analysis, we want to avoid that a person is ``split up'' in several end nodes, and that the cluster argument also helps for that? If that's correct, this could also be a good place to add a sentence about this advantage?}. 
+Finally, because we want to retain large enough subgroups, we specified that the minimum number of observations in a terminal node should be 250.
 
 Next, we plot the tree. With multiple fixed-effects predictors of interest, the default plots may become too crowded or difficult to interpret. We therefore specify \verb|type = "simple"| to facilitate interpretation, and using the \verb|nodesize_level| argument, we specified that the sample size printed above every terminal node should count the number of children, not the number of individual observations:
 
@@ -424,15 +426,14 @@ Due to the exploratory nature of MOB, it does not allow for hypothesis tests\tod
 
 \todo{Write about future work.}
 
-sample size dependence, similar ideas like MH trees also possible for other MOB? \todo[inline]{possibly Mirka add something about visual interpretation? because effect sizes in mixed effects models are not very clear}
-
 The Rasch tree method has been extended to include an effect size measure that can stop the tree from growing if the effect size is non-substantial, but also supports researchers in interpreting the tree's results with respect to whether DIF effects are negligible, medium, or large. At the same time, effect sizes are less straightforward to calculate and interpret in linear mixed models, and therewith in the linear mixed effects model tree. A remedy to this issue can be interpretation techniques, such as partial dependence plots or individual conditional expectations plots. These interpretation techniques support researchers in gauging the size of the effect of predictor variables visually by depicting the predicted value of the machine learning method as a function of the value of the predictor variable(s). A comprehensive introduction, tutorial, and discussion into interpretation techniques for machine learning methods is given by \cite{Molnar2019} and \cite{Henninger2022c}. 
-\todo[inline]{This is my (Mirka) suggestion for the interpretation techniques. Please feel free to add, edit, delete, however you prefer!}
 
+\color{blue} Using cluster-level predictor variables is desirable in particular when using MOB for longitudinal analysis. Therefore, building on recent work by \citet{FokkyZeil23}, we will further evaluate how the level of splitting variables can be taken into account best when using MOB, for instance using a variant of parameter stability tests to study heterogeneity on the cluster level \citep{Wang2021a}. 
 
-\todo{Mention that the exclusion of random effects from partitioning can both be advantage and disadvantage. In future work, use of parameter stability tests for random-effects parameters of Ting and Ed will be explored.}
+\color{black}
+\todo[inline]{\color{blue} I (Mirka) added a short point on future work regarding cluster-level predictors and their Type-I error rate here. $\rightarrow$ this paragraph can also transition well to your comment on including parameter stability tests for random-effects parameter \color{black}Mention that the exclusion of random effects from partitioning can both be advantage and disadvantage. In future work, use of parameter stability tests for random-effects parameters of Ting and Ed will be explored.}
 
-\todo{Mention that transformations chosen in growth curve modeling may yield different effects. In future work, recursive partitioning of GAMs will be explored to obviate the need for manual transformation of the predictors.}
+\todo[inline]{Mention that transformations chosen in growth curve modeling may yield different effects. In future work, recursive partitioning of GAMs will be explored to obviate the need for manual transformation of the predictors.}
 
 \bibliography{_MOB_paper}
 
