--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -442,4 +442,15 @@ differential item functioning in the {R}asch model},
   pages = {22--56},
 }
 
+@article{Wang2021a,
+author = {Wang, Ting and Merkle, Edgar C. and Anguera, Joaquin A. and Turner, Brandon M.},
+doi = {10.3758/s13428-020-01375-7},
+journal = {Behavior Research Methods},
+pages = {216--231},
+publisher = {Behavior Research Methods},
+title = {{Score-based tests for explaining heterogeneity in linear mixed models}},
+volume = {53},
+year = {2021}
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
